# unified-memory-framework

./: CMakeLists.txt  umf_example.cpp
examples/: CMakeLists.txt
examples/basic/: ipc_level_zero.c  ipc_level_zero_ipcapi.sh  ipc_level_zero_ipcapi_consumer.c  ipc_level_zero_ipcapi_producer.c  provider_ipc_level_zero_getpidfd.c  provider_ipc_level_zero_getpidfd.h
scripts/docs_config/: examples.rst
src/: CMakeLists.txt  ipc.c  ipc_cache.c  ipc_cache.h  libumf.c
src/provider/: provider_tracking.c  provider_tracking.h
test/: CMakeLists.txt  ipcFixtures.hpp  provider_os_memory.cpp
umf/: CMakeLists.txt
umf/disjoint_pool/: disjoint_heap_manager.cpp  disjoint_pool.cpp  disjoint_pool.h  disjoint_pool.hpp
umf/memory_providers/: fixed_memory_provider.cpp  fixed_memory_provider.h  os_memory_provider.cpp  os_memory_provider.h  ze_memory_provider.cpp  ze_memory_provider.h
umf/umf/src/: memory_pool_default.cpp  memory_provider.cpp
umf/umf/src/critnib/: critnib.c
